allign header to two eben spaced tables

--- a/paulbrenker.tex
+++ b/paulbrenker.tex
@@ -29,29 +29,31 @@
 \begin{minipage}[t]{0.99\textwidth} % else 80 %
     \vspace{0pt}
     \begin{shaded*}
-        \begin{minipage}[t]{0.40\textwidth}
+        \begin{minipage}[t]{0.50\textwidth}
             \vspace{0pt}
             {\par\centering\huge{Paul Brenker}} \\[0.3cm]
             %\faGlobe~ Nationality: German, Work Visa Israel B1\\
             %\faBirthdayCake~ 1996 \\
-            \faMapMarker~ Tel Aviv, Israel \\
-            \faCommentsO~ \underline{Languages:} \\
+            \vspace{-3pt}
             \begin{tabular}{l l}
-                \textbf{German:} native & \textbf{English:} full proficiency \\
-                \textbf{Hebrew:} advanced proficiency & \textbf{Arabic:} basic knowledge \\ 
+                \faMapMarker~ Tel Aviv, Israel &
+                \faPhone~ +972 52 3002843 \\
+                \faLink~ \href{https://www.pbrenk.com}{Personal Blog} & 
+                \faAt~ \href{mailto:paul.brenker@gmail.com}{paul.brenker@gmail.com}\\
+                \faGithub~ \href{https://github.com/paulbrenker}{GitHub} & 
+                \faLinkedin~ \href{https://www.linkedin.com/in/paul-brenker}{LinkedIn}\\ 
             \end{tabular}
             \vspace{4pt}
         \end{minipage}\hfill
         \begin{minipage}[t]{0.50\textwidth}
-            \vspace{29pt} 
+            \vspace{25pt} 
+            \faCommentsO~ {Languages:} \\
             \begin{tabular}{l l}
-                \faLink~ \href{https://www.pbrenk.com}{Personal Blog} & \faAt~ \href{mailto:paul.brenker@gmail.com}{paul.brenker@gmail.com}\\
-                \faGithub~ \href{https://github.com/paulbrenker}{GitHub} & \faLinkedin~ \href{https://www.linkedin.com/in/paul-brenker}{LinkedIn} \\ 
-                \faPhone~ +972 52 3002843 &\\
-
+                \textbf{German:} native & \textbf{English:} full proficiency \\
+                \textbf{Hebrew:} advanced proficiency & \textbf{Arabic:} basic knowledge \\ 
             \end{tabular}
 
-            %\faPhone~ +49 173 5287524 \\
+
         \end{minipage}
         \hfill
     \end{shaded*}
@@ -60,7 +62,7 @@
 \vspace{-3em}
 \begin{minipage}{0.99\textwidth}
 \section*{Summary}
-    \textbf{Backend Software Engineer} with a strong \textbf{Computer Science} background focussed on \textbf{Java Virtual Machine} based Projects. I have valuable experience working for a company that scaled a product from thousands to hundreds of thousands of users working across the \textbf{whole web development stack}. Known for my analytical mindset, persistence, and ability to thrive under pressure I am looking for a dynamical environment that will support my professional growth and technical excellence.
+    \textbf{Backend Software Engineer} with a strong \textbf{Computer Science} background focussed on \textbf{Java Virtual Machine} based Projects. I have valuable experience working for a company that scaled a product from thousands to hundreds of thousands of users working across the \textbf{whole web development stack}. Known for my analytical mindset, persistence, and ability to thrive under pressure I am looking for a dynamic environment that will support my professional growth and technical excellence.
 \end{minipage}
 \bigskip
 
@@ -182,19 +184,5 @@
     %         Cycling & I love to ride bicycles not just for sport but also in the everyday for a sustainable and balanced life.
     %     \end{tabular}
     % \end{minipage}
-% \end{paracol}
 
-%\vfill{} % Whitespace before final footer
-% \setlength{\parindent}{0pt}
-% \begin{minipage}[t]{\textwidth}
-%     \begin{center}\fontfamily{\sfdefault}\selectfont \color{black!70}
-%         {\small Paul Brenker 
-%         %\icon{\faEnvelopeO}{black}{} Maxstr. 28 
-%         \icon{\faMapMarker}{black}{} Tel Aviv 
-%         \icon{\faPhone}{black}{} +972 52 3002843
-%         \icon{\faPhone}{black}{} +49 173 5287524
-%         \icon{\faAt}{black}{} \protect\url{paulbrenker@gmail.com}
-%         }
-%     \end{center}
-% \end{minipage}
 \end{document}
